fixed navigation animation on mobile size

--- a/burger-button/sass/style.scss
+++ b/burger-button/sass/style.scss
@@ -72,7 +72,7 @@ ul {
 		height: 92vh;
 		background: rgb(37, 155, 173);
 		flex-direction: column;
-		transform: translate(100%);
+		transform: translate(1000%);
 		transition: 0.3s;
 	}
 	ul.active {
